-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.14.0
-
Fix Version/s: 5.14.1, 5.15.0 Alpha
-
Component/s: Build tools: windeployqt
-
Labels:None
-
Environment:Windows
-
Platform/s:
-
Commits:34b27e650f2c1033e5e92c57beeccc5aabcd3f63 (qt/qttools/5.14)
While QTBUG 80763 fixes windeployqt's problems for MinGW Qt 5.14.0 for debug builds, the bug still exists for release builds.
The reason is that the flag NT FileHeader flag "Debug information stripped" is no longer present in release build of qwindows.dll. So the logic in determineDebugAndDependentLibs() in utils.cpp incorrectly thinks that all .dlls are debug flavored, line 828 and 829:
// Use logic that's used e.g. in objdump / pfd library
*isDebugIn = !(nth->FileHeader.Characteristics & IMAGE_FILE_DEBUG_STRIPPED);
I currently use the workaround
*isDebugIn = false;
since I never use debug builds, but it's a bit crude
- is duplicated by
-
QTBUG-81235 windelployqt is broken in Qt5.14 ("unable to find platform plugin")
-
- Closed
-
-
QTBUG-90614 windeployqt.exe does not find platform plugins in release mode
-
- Closed
-
- is related to
-
QTBUG-80763 REG->5.14: MinGW: windeployqt fails with "Unable to find the platform plugin."
-
- Closed
-
- relates to
-
QTBUG-80792 MinGW: Regressions in 5.14.0
-
- Closed
-
-
QTBUG-84567 Windeployqt fails with "Unable to find the platform plugin" when using --release switch
-
- Closed
-