windeployqt: Refactor platform enumeration

- Make it a QFlags, providing operators
- Remove WinCE
- Add a Msvc compiler flag and make the tests for
  build directory and d-suffix depending on it.
- Add clang-Msvc/clang-MinGW
- Rename WindowsDesktop to WindowsDesktopMsvc,
  WinRtIntel to WinRtIntelMsvc and WinRtArm to WinRtArmMsvc
- Use QFlags::testFlag()

Task-number: QTBUG-80806
Task-number: QTBUG-80763
Task-number: QTBUG-78445
Change-Id: I0dd74a7b03e9e6bee55d4234c12eec17d52ce0e2
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>